create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2140,82 +2140,82 @@ body {
     width: 5%;
   }
 }
-.cid-s63gAMbdWq {
+.cid-s63ZLfRkuQ {
   padding-top: 45px;
   padding-bottom: 45px;
   background-color: #0f7699;
 }
 @media (max-width: 767px) {
-  .cid-s63gAMbdWq .content {
+  .cid-s63ZLfRkuQ .content {
     text-align: center;
   }
-  .cid-s63gAMbdWq .content > div:not(:last-child) {
+  .cid-s63ZLfRkuQ .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
-.cid-s63gAMbdWq .img-logo img {
+.cid-s63ZLfRkuQ .img-logo img {
   height: 6rem;
 }
-.cid-s63gAMbdWq .form-control {
+.cid-s63ZLfRkuQ .form-control {
   margin-bottom: 1rem;
   padding: 1.07em 1.07em;
   background-color: #f5f5f5;
   border: 1px solid #e8e8e8;
-  color: #ffffff;
+  color: #656565;
   line-height: 1.43;
   min-height: 3.5em;
   border-radius: .25rem;
 }
-.cid-s63gAMbdWq .form-control:focus,
-.cid-s63gAMbdWq .form-control:hover {
+.cid-s63ZLfRkuQ .form-control:focus,
+.cid-s63ZLfRkuQ .form-control:hover {
   border: 1px solid #e8e8e8;
   background-color: #f5f5f5;
 }
-.cid-s63gAMbdWq .form-group {
+.cid-s63ZLfRkuQ .form-group {
   margin-bottom: 1rem;
 }
-.cid-s63gAMbdWq input::-webkit-input-placeholder,
-.cid-s63gAMbdWq textarea::-webkit-input-placeholder {
+.cid-s63ZLfRkuQ input::-webkit-input-placeholder,
+.cid-s63ZLfRkuQ textarea::-webkit-input-placeholder {
   color: #656565;
 }
-.cid-s63gAMbdWq input:-moz-placeholder,
-.cid-s63gAMbdWq textarea:-moz-placeholder {
+.cid-s63ZLfRkuQ input:-moz-placeholder,
+.cid-s63ZLfRkuQ textarea:-moz-placeholder {
   color: #656565;
 }
-.cid-s63gAMbdWq .jq-selectbox li,
-.cid-s63gAMbdWq .jq-selectbox li {
+.cid-s63ZLfRkuQ .jq-selectbox li,
+.cid-s63ZLfRkuQ .jq-selectbox li {
   background-color: #f5f5f5;
   color: #000000;
 }
-.cid-s63gAMbdWq .jq-selectbox li:hover,
-.cid-s63gAMbdWq .jq-selectbox li.selected {
+.cid-s63ZLfRkuQ .jq-selectbox li:hover,
+.cid-s63ZLfRkuQ .jq-selectbox li.selected {
   background-color: #f5f5f5;
   color: #000000;
 }
-.cid-s63gAMbdWq .jq-selectbox:hover .jq-selectbox__trigger-arrow {
+.cid-s63ZLfRkuQ .jq-selectbox:hover .jq-selectbox__trigger-arrow {
   border-top-color: #f5f5f5;
 }
-.cid-s63gAMbdWq .jq-selectbox .jq-selectbox__trigger-arrow {
+.cid-s63ZLfRkuQ .jq-selectbox .jq-selectbox__trigger-arrow {
   border-top-color: #f5f5f5;
 }
-.cid-s63gAMbdWq textarea.form-control {
+.cid-s63ZLfRkuQ textarea.form-control {
   resize: none;
 }
-.cid-s63gAMbdWq .input-group-btn {
+.cid-s63ZLfRkuQ .input-group-btn {
   display: inline-block;
 }
-.cid-s63gAMbdWq .input-group-btn .btn {
+.cid-s63ZLfRkuQ .input-group-btn .btn {
   margin: 0 !important;
   padding: .75rem 1.5625rem !important;
   text-transform: none;
 }
-.cid-s63gAMbdWq .form-group {
+.cid-s63ZLfRkuQ .form-group {
   -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
   -webkit-justify-content: center;
   justify-content: center;
 }
-.cid-s63gAMbdWq .social-list {
+.cid-s63ZLfRkuQ .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -2223,41 +2223,41 @@ body {
   -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
 }
-.cid-s63gAMbdWq .social-list .mbr-iconfont-social {
+.cid-s63ZLfRkuQ .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-s63gAMbdWq .social-list .soc-item {
+.cid-s63ZLfRkuQ .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-s63gAMbdWq .social-list a {
+.cid-s63ZLfRkuQ .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-s63gAMbdWq .social-list a:hover {
+.cid-s63ZLfRkuQ .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-s63gAMbdWq .social-list {
+  .cid-s63ZLfRkuQ .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
 @media (max-width: 767px) {
-  .cid-s63gAMbdWq .footer-lower .copyright {
+  .cid-s63ZLfRkuQ .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-s63gAMbdWq .footer-lower hr {
+.cid-s63ZLfRkuQ .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-s63gAMbdWq .form-control,
-.cid-s63gAMbdWq .input-group-btn .btn {
+.cid-s63ZLfRkuQ .form-control,
+.cid-s63ZLfRkuQ .input-group-btn .btn {
   border-radius: 3px;
 }
 .cid-s1HqXIswsO .dropdown-item:before {
@@ -2631,63 +2631,63 @@ body {
     margin-right: 1rem;
   }
 }
-.cid-s63993Nfnb {
+.cid-s6408AZSRK {
   padding-top: 90px;
   padding-bottom: 90px;
   background-color: #ffffff;
 }
-.cid-s63993Nfnb h4 {
+.cid-s6408AZSRK h4 {
   font-weight: 500;
   margin-bottom: 0;
   text-align: left;
   padding-top: 2rem;
 }
-.cid-s63993Nfnb p {
+.cid-s6408AZSRK p {
   margin-bottom: 0;
   text-align: left;
   padding-top: 1.5rem;
 }
-.cid-s63993Nfnb .mbr-section-btn {
+.cid-s6408AZSRK .mbr-section-btn {
   padding-top: 2.5rem;
 }
-.cid-s63993Nfnb .mbr-section-btn a {
+.cid-s6408AZSRK .mbr-section-btn a {
   margin: 0;
 }
-.cid-s63993Nfnb .mbr-text {
+.cid-s6408AZSRK .mbr-text {
   color: #767676;
 }
-.cid-s63993Nfnb .card-wrapper {
+.cid-s6408AZSRK .card-wrapper {
   height: 100%;
 }
 @media (max-width: 767px) {
-  .cid-s63993Nfnb .card:not(.last-child) {
+  .cid-s6408AZSRK .card:not(.last-child) {
     padding-bottom: 2rem;
   }
 }
-.cid-s63993Nfnb H2 {
+.cid-s6408AZSRK .card-title {
+  color: #149dcc;
+}
+.cid-s6408AZSRK H2 {
   text-align: center;
   color: #149dcc;
 }
-.cid-s63993Nfnb .card-title {
-  color: #149dcc;
-}
-.cid-s63dsOfN43 {
+.cid-s641UZJIIC {
   padding-top: 45px;
   padding-bottom: 45px;
   background-color: #0f7699;
 }
 @media (max-width: 767px) {
-  .cid-s63dsOfN43 .content {
+  .cid-s641UZJIIC .content {
     text-align: center;
   }
-  .cid-s63dsOfN43 .content > div:not(:last-child) {
+  .cid-s641UZJIIC .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
-.cid-s63dsOfN43 .img-logo img {
+.cid-s641UZJIIC .img-logo img {
   height: 6rem;
 }
-.cid-s63dsOfN43 .form-control {
+.cid-s641UZJIIC .form-control {
   margin-bottom: 1rem;
   padding: 1.07em 1.07em;
   background-color: #f5f5f5;
@@ -2697,56 +2697,56 @@ body {
   min-height: 3.5em;
   border-radius: .25rem;
 }
-.cid-s63dsOfN43 .form-control:focus,
-.cid-s63dsOfN43 .form-control:hover {
+.cid-s641UZJIIC .form-control:focus,
+.cid-s641UZJIIC .form-control:hover {
   border: 1px solid #e8e8e8;
   background-color: #f5f5f5;
 }
-.cid-s63dsOfN43 .form-group {
+.cid-s641UZJIIC .form-group {
   margin-bottom: 1rem;
 }
-.cid-s63dsOfN43 input::-webkit-input-placeholder,
-.cid-s63dsOfN43 textarea::-webkit-input-placeholder {
+.cid-s641UZJIIC input::-webkit-input-placeholder,
+.cid-s641UZJIIC textarea::-webkit-input-placeholder {
   color: #656565;
 }
-.cid-s63dsOfN43 input:-moz-placeholder,
-.cid-s63dsOfN43 textarea:-moz-placeholder {
+.cid-s641UZJIIC input:-moz-placeholder,
+.cid-s641UZJIIC textarea:-moz-placeholder {
   color: #656565;
 }
-.cid-s63dsOfN43 .jq-selectbox li,
-.cid-s63dsOfN43 .jq-selectbox li {
+.cid-s641UZJIIC .jq-selectbox li,
+.cid-s641UZJIIC .jq-selectbox li {
   background-color: #f5f5f5;
   color: #000000;
 }
-.cid-s63dsOfN43 .jq-selectbox li:hover,
-.cid-s63dsOfN43 .jq-selectbox li.selected {
+.cid-s641UZJIIC .jq-selectbox li:hover,
+.cid-s641UZJIIC .jq-selectbox li.selected {
   background-color: #f5f5f5;
   color: #000000;
 }
-.cid-s63dsOfN43 .jq-selectbox:hover .jq-selectbox__trigger-arrow {
+.cid-s641UZJIIC .jq-selectbox:hover .jq-selectbox__trigger-arrow {
   border-top-color: #f5f5f5;
 }
-.cid-s63dsOfN43 .jq-selectbox .jq-selectbox__trigger-arrow {
+.cid-s641UZJIIC .jq-selectbox .jq-selectbox__trigger-arrow {
   border-top-color: #f5f5f5;
 }
-.cid-s63dsOfN43 textarea.form-control {
+.cid-s641UZJIIC textarea.form-control {
   resize: none;
 }
-.cid-s63dsOfN43 .input-group-btn {
+.cid-s641UZJIIC .input-group-btn {
   display: inline-block;
 }
-.cid-s63dsOfN43 .input-group-btn .btn {
+.cid-s641UZJIIC .input-group-btn .btn {
   margin: 0 !important;
   padding: .75rem 1.5625rem !important;
   text-transform: none;
 }
-.cid-s63dsOfN43 .form-group {
+.cid-s641UZJIIC .form-group {
   -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
   -webkit-justify-content: center;
   justify-content: center;
 }
-.cid-s63dsOfN43 .social-list {
+.cid-s641UZJIIC .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -2754,41 +2754,41 @@ body {
   -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
 }
-.cid-s63dsOfN43 .social-list .mbr-iconfont-social {
+.cid-s641UZJIIC .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-s63dsOfN43 .social-list .soc-item {
+.cid-s641UZJIIC .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-s63dsOfN43 .social-list a {
+.cid-s641UZJIIC .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-s63dsOfN43 .social-list a:hover {
+.cid-s641UZJIIC .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-s63dsOfN43 .social-list {
+  .cid-s641UZJIIC .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
 @media (max-width: 767px) {
-  .cid-s63dsOfN43 .footer-lower .copyright {
+  .cid-s641UZJIIC .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-s63dsOfN43 .footer-lower hr {
+.cid-s641UZJIIC .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-s63dsOfN43 .form-control,
-.cid-s63dsOfN43 .input-group-btn .btn {
+.cid-s641UZJIIC .form-control,
+.cid-s641UZJIIC .input-group-btn .btn {
   border-radius: 3px;
 }
 .cid-s1HqXIswsO .dropdown-item:before {
